everything is up to date

--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -1,33 +1,33 @@
 \begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
-	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\
-Baseline	&	\multicolumn{2}{c}{\textbf{5.72} (s.e. 2.38)}	&	\multicolumn{2}{c}{\textbf{11.44} (s.e. 5.60)}	&	\multicolumn{2}{c}{2.70 s.e. (0.99)}	\\ \\
-\multicolumn{7}{l}{\textit{Baseline: IPW and Control variables, Life-span up to predicted death, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, }} \\	
-\multicolumn{7}{l}{\textit{Parental income 0 to 21 (child's age), Labor Income predicted from 21 to 67, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
-Specification	&	\textit{No IPW}	&	\textit{\& No Control Variables}	&	\textit{No IPW}	&	\textit{\& No Control Variables}	&	\textit{No IPW}	&	\textit{\& No Control Variables}	\\
-	&	\textbf{6.15}	&	\textbf{5.30}	&	\textbf{11.87}	&	\textbf{10.34}	&	\textbf{3.01}	&	\textbf{2.84}	\\
-	&	(2.43)	&	(2.07)	&	(6.28)	&	(3.93)	&	(0.98)	&	(0.82)	\\ \midrule
+	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ 
+Baseline	&	\multicolumn{2}{c}{\textbf{6.29} (s.e. 2.11)}	&	\multicolumn{2}{c}{\textbf{11.10} (s.e. 6.35)}	&	\multicolumn{2}{c}{\textbf{2.45} (s.e. 0.79)}	\\ \\
+\multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to predicted death, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
+\multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
+Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
+	&	\textbf{6.69}	&	\textbf{5.96}	&	\textbf{11.10}	&	\textbf{9.67}	&	\textbf{2.82}	&	\textbf{2.56}	\\
+	&	(2.09)	&	(1.65)	&	(6.69)	&	(3.76)	&	(0.87)	&	(0.76)	\\ \midrule
 Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
-Span	&	\textbf{1.56}	&	1.99	&	2.00	&	2.61	&	1.30	&	1.62	\\
-	&	(0.37)	&	(0.87)	&	(0.76)	&	(1.96)	&	(0.45)	&	(0.50)	\\ \midrule
+Span	&	\textbf{1.56}	&	2.01	&	2.02	&	2.31	&	1.31	&	1.69	\\
+	&	(0.38)	&	(0.86)	&	(0.76)	&	(1.86)	&	(0.44)	&	(0.50)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
-factuals	&	\textbf{4.47}	&	\textbf{6.59}	&	4.47	&	\textbf{10.69}	&	\textbf{4.93}	&	\textbf{2.37}	\\
-	&	(1.67)	&	(2.13)	&	(3.09)	&	(4.15)	&	(1.50)	&	(0.94)	\\ \midrule
+factuals	&	\textbf{4.58}	&	\textbf{6.69}	&	4.44	&	\textbf{10.40}	&	\textbf{5.04}	&	\textbf{2.48}	\\
+	&	(1.63)	&	(2.02)	&	(2.90)	&	(4.18)	&	(1.22)	&	(0.75)	\\ \midrule
 Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	\\
-loss	&	\textbf{8.53}	&	\textbf{4.32}	&	\textbf{17.20}	&	\textbf{8.56}	&	\textbf{3.80}	&	\textbf{2.16}	\\
-	&	(3.56)	&	(1.80)	&	(8.37)	&	(4.23)	&	(1.44)	&	(0.80)	\\ \midrule
+loss	&	\textbf{10.02}	&	\textbf{5.05}	&	\textbf{17.39}	&	\textbf{8.65}	&	\textbf{4.27}	&	\textbf{2.37}	\\
+	&	(3.30)	&	(1.66)	&	(9.61)	&	(4.83)	&	(1.39)	&	(0.75)	\\ \midrule
 Discount 	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	&	\textit{0\%}	&	\textit{7\%}	\\
-Rate	&	\textbf{13.48}	&	\textbf{2.39}	&	\textbf{29.58}	&	\textbf{4.07}	&	5.46	&	1.50	\\
-	&	(7.18)	&	(0.82)	&	(16.34)	&	(1.89)	&	(3.78)	&	(0.38)	\\ \midrule
+Rate	&	\textbf{16.49}	&	\textbf{2.67}	&	\textbf{29.66}	&	4.10	&	\textbf{5.77}	&	\textbf{1.66}	\\
+	&	(6.97)	&	(0.76)	&	(18.12)	&	(2.07)	&	(3.55)	&	(0.41)	\\ \midrule
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
-Income	&	\textbf{5.95}	&	\textbf{6.15}	&	\textbf{11.63}	&	\textbf{11.93}	&	\textbf{2.98}	&	\textbf{3.25}	\\
-	&	(2.39)	&	(2.48)	&	(5.60)	&	(5.69)	&	(1.03)	&	1.14	\\ \midrule
+Income	&	\textbf{6.52}	&	\textbf{6.71}	&	\textbf{11.29}	&	\textbf{11.56}	&	\textbf{2.73}	&	\textbf{3.00}	\\
+	&	(2.11)	&	(2.20)	&	(6.35)	&	(6.42)	&	(0.84)	&	(0.94)	\\ \midrule
 Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
-Income	&	\textbf{5.51}	&	\textbf{5.92}	&	\textbf{10.60}	&	\textbf{12.29}	&	\textbf{2.57}	&	\textbf{2.84}	\\
-	&	(2.31)	&	(2.47)	&	(5.47)	&	(5.81)	&	(0.88)	&	1.11	\\ \midrule
+Income	&	\textbf{5.93}	&	\textbf{6.64}	&	\textbf{10.39}	&	\textbf{11.81}	&	\textbf{2.38}	&	\textbf{2.53}	\\
+	&	(2.09)	&	(2.15)	&	(6.02)	&	(6.71)	&	(0.76)	&	(0.83)	\\ \midrule
 Crime	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	\\
-	&	\textbf{5.17}	&	\textbf{4.09}	&	\textbf{11.79}	&	\textbf{8.19}	&	\textbf{2.80}	&	\textbf{2.34}	\\
-	&	(2.37)	&	(1.56)	&	(5.43)	&	(3.69)	&	(1.07)	&	0.96	\\ \midrule
+	&	\textbf{5.68}	&	\textbf{4.68}	&	\textbf{11.31}	&	\textbf{7.72}	&	\textbf{2.56}	&	\textbf{2.09}	\\
+	&	(1.97)	&	(1.37)	&	(5.42)	&	(4.16)	&	(0.83)	&	(0.73)	\\ \midrule
 Health	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	\\
-(QALYs)	&	\textbf{4.82}	&	\textbf{6.62}	&	\textbf{10.26}	&	\textbf{12.65}	&	\textbf{2.57}	&	\textbf{2.83}	\\
-	&	(2.32)	&	(2.64)	&	(5.46)	&	(6.13)	&	(0.99)	&	1.27	\\ \bottomrule
+(QALYs)	&	\textbf{5.38}	&	\textbf{7.19}	&	9.90	&	\textbf{12.27}	&	\textbf{2.32}	&	\textbf{2.59}	\\
+	&	(2.04)	&	(2.42)	&	(6.13)	&	(6.75)	&	(0.76)	&	(1.15)	\\ \bottomrule
 \end{tabular} 
