--- a/output/allirr_sens.tex
+++ b/output/allirr_sens.tex
@@ -1,30 +1,30 @@
 \begin{tabular}{>{\bfseries}lcc|cc|cc} \toprule
-	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\
-Baseline	&	\multicolumn{2}{c}{\textbf{.12} (s.e. .05)}	&	\multicolumn{2}{c}{\textbf{.14} (s.e. .06)}	&	\multicolumn{2}{c}{.10 (s.e. .07)}	\\ \\
-\multicolumn{7}{l}{\textit{Baseline: IPW and Control variables, Life-span up to predicted death, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%,}} \\	
-\multicolumn{7}{l}{\textit{Parental income 0 to 21 (child's age), Labor Income predicted from 21 to 67, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
-Specification	&	\textit{No IPW}	&	\textit{\& No Control Variables}	&	\textit{No IPW}	&	\textit{\& No Control Variables}	&	\textit{No IPW}	&	\textit{\& No Control Variables}	\\
-	&	\textbf{0.13}	&	\textbf{0.12}	&	\textbf{0.15}	&	\textbf{0.14}	&	0.12	&	\textbf{0.09}	\\
-	&	(0.05)	&	(0.04)	&	(0.09)	&	(0.05)	&	(0.07)	&	(0.04)	\\ \midrule
+	&	\multicolumn{2}{c}{\textbf{\textit{Pooled}}}	&	\multicolumn{2}{c}{\textbf{\textit{Males}}}	&	\multicolumn{2}{c}{\textbf{\textit{Females}}}	\\ 
+Baseline	&	\multicolumn{2}{c}{\textbf{0.13} (s.e. 0.05)}	&	\multicolumn{2}{c}{\textbf{0.13} (s.e. 0.06)}	&	\multicolumn{2}{c}{0.10 (s.e. 0.08)}	\\ \\
+\multicolumn{7}{l}{\textit{Baseline: IPW and Controls, Life-span up to predicted death, Treatment vs. Next Best, 50\% Marginal tax 50\% (deadweight loss), Discount rate 3\%, Parental}} \\	
+\multicolumn{7}{l}{\textit{income 0 to 21 (child's age), Labor Income predicted from 21 to 65, All crimes (full costs), Value of life 150,000.}} \\ \\ \midrule	
+Specification	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	&	\textit{No IPW}	&	\textit{and No Controls}	\\
+	&	\textbf{0.14}	&	\textbf{0.13}	&	\textbf{0.15}	&	\textbf{0.14}	&	0.12	&	0.09	\\
+	&	(0.05)	&	(0.04)	&	(0.10)	&	(0.05)	&	(0.08)	&	(0.05)	\\ \midrule
 Prediction	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	&	\textit{to Age 21}	&	\textit{to Age 30}	\\
-Span	&	\textbf{0.11}	&	\textbf{0.11}	&	\textbf{0.12}	&	\textbf{0.13}	&	0.12	&	0.13	\\
-	&	(0.04)	&	(0.04)	&	(0.05)	&	(0.05)	&	(0.08)	&	(0.07)	\\ \midrule
+Span	&	\textbf{0.11}	&	\textbf{0.11}	&	\textbf{0.12}	&	\textbf{0.13}	&	\textbf{0.12}	&	\textbf{0.13}	\\
+	&	(0.05)	&	(0.04)	&	(0.05)	&	(0.05)	&	(0.08)	&	(0.07)	\\ \midrule
 Counter-	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	&	\textit{vs. Stay at Home}	&	\textit{vs. Alt. Presch.}	\\
-factuals	&	\textbf{0.09}	&	\textbf{0.14}	&	0.07	&	\textbf{0.15}	&	\textbf{0.13}	&	0.09	\\
-	&	(0.04)	&	(0.05)	&	(0.05)	&	(0.06)	&	(0.07)	&	(0.08)	\\ \midrule
+factuals	&	\textbf{0.09}	&	\textbf{0.14}	&	\textbf{0.07}	&	\textbf{0.15}	&	\textbf{0.14}	&	0.10	\\
+	&	(0.04)	&	(0.04)	&	(0.04)	&	(0.06)	&	(0.07)	&	(0.08)	\\ \midrule
 Deadweight-	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	&	\textit{0\%}	&	\textit{100\%\textit}	\\
-loss	&	\textbf{0.18}	&	\textbf{0.09}	&	\textbf{0.18}	&	\textbf{0.11}	&	0.18	&	0.08	\\
-	&	(0.08)	&	(0.04)	&	(0.08)	&	(0.05)	&	(0.16)	&	(0.05)	\\ \midrule
+loss	&	\textbf{0.20}	&	\textbf{0.11}	&	\textbf{0.18}	&	\textbf{0.11}	&	0.21	&	\textbf{0.09}	\\
+	&	(0.08)	&	(0.07)	&	(0.08)	&	(0.05)	&	(0.19)	&	(0.10)	\\ \midrule
 Parental	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	&	\textit{Mincer Life-cycle}	&	\textit{Life-cycle Prediction}	\\
-Income	&	\textbf{0.14}	&	\textbf{0.13}	&	\textbf{0.15}	&	\textbf{0.13}	&	0.14	&	\textbf{0.12}	\\
-	&	(0.06)	&	(0.07)	&	(0.06)	&	(0.07)	&	(0.12)	&	(0.11)	\\ \midrule
+Income	&	\textbf{0.15}	&	\textbf{0.14}	&	\textbf{0.14}	&	\textbf{0.14}	&	0.14	&	\textbf{0.13}	\\
+	&	(0.06)	&	(0.06)	&	(0.07)	&	(0.06)	&	(0.12)	&	(0.11)	\\ \midrule
 Labor	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	&	\textit{.5\% Annual Decay}	&	\textit{.5\% Annual Growth}	\\
-Income	&	\textbf{0.12}	&	\textbf{0.12}	&	\textbf{0.13}	&	\textbf{0.14}	&	0.11	&	0.10	\\
-	&	(0.05)	&	(0.05)	&	(0.06)	&	(0.06)	&	(0.08)	&	(0.07)	\\ \midrule
+Income	&	\textbf{0.13}	&	\textbf{0.13}	&	\textbf{0.13}	&	\textbf{0.13}	&	0.10	&	0.10	\\
+	&	(0.05)	&	(0.04)	&	(0.06)	&	(0.06)	&	(0.08)	&	(0.08)	\\ \midrule
 Crime	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	\\
-	&	\textbf{0.12}	&	\textbf{0.10}	&	\textbf{0.14}	&	\textbf{0.12}	&	0.11	&	0.10	\\
-	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.06)	&	(0.08)	&	(0.08)	\\ \midrule
+	&	\textbf{0.13}	&	\textbf{0.11}	&	\textbf{0.14}	&	\textbf{0.11}	&	0.11	&	0.10	\\
+	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.05)	&	(0.08)	&	(0.08)	\\ \midrule
 Health	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	\\
-(QALYs)	&	\textbf{0.10}	&	\textbf{0.12}	&	\textbf{0.13}	&	\textbf{0.14}	&	0.10	&	0.09	\\
+(QALYs)	&	\textbf{0.12}	&	\textbf{0.13}	&	\textbf{0.12}	&	\textbf{0.13}	&	0.10	&	0.09	\\
 	&	(0.06)	&	(0.05)	&	(0.07)	&	(0.06)	&	(0.08)	&	(0.07)	\\ \bottomrule
 \end{tabular} 
