--- a/output/auto_nlsypsid_lowinc.tex
+++ b/output/auto_nlsypsid_lowinc.tex
@@ -3,19 +3,19 @@
  & ar1psidnlsy \\
 VARIABLES & inc\_labor \\ \hline
  &  \\
-male & -30.191 \\
- & (61.354) \\
-years\_30y & 40.671*** \\
- & (14.933) \\
-si30y\_inc\_labor & -0.081*** \\
+male & -305.360*** \\
+ & (64.837) \\
+years\_30y & -84.822*** \\
+ & (16.306) \\
+si30y\_inc\_labor & -0.087*** \\
  & (0.001) \\
-linc\_labor & 1.045*** \\
+linc\_labor & 1.046*** \\
  & (0.000) \\
-Constant & -297.980 \\
- & (190.407) \\
+Constant & 945.103*** \\
+ & (203.414) \\
  &  \\
-Observations & 181,258 \\
- Number of id & 6,718 \\ \hline
+Observations & 123,871 \\
+ Number of id & 5,812 \\ \hline
 \multicolumn{2}{c}{ Standard errors in parentheses} \\
 \multicolumn{2}{c}{ *** p$<$0.01, ** p$<$0.05, * p$<$0.10} \\
 \end{tabular}
