--- a/abc_comprehensivecba_predmodels.tex
+++ b/abc_comprehensivecba_predmodels.tex
@@ -23,7 +23,7 @@
 
 \doublespacing
 
-\subsection{Investigating Different Prediction Models} \label{appendix:predmodels}
+\subsection{Investigating Different Prediction Models} \label{appendix:predsensitivity}
 
 \noindent Our analysis is based on a causal model for treatment ($d=1$) and control ($d=0$) outcomes for measure $j$ at age $a$ in sample $k \in \{e,n\}$ where $e$ denotes membership in the experimental sample and $n$ denotes membership in the auxiliary sample:
 
