--- a/heckman.bib
+++ b/heckman.bib
@@ -995,7 +995,16 @@
   Timestamp                = {2008.03.26}
 }
 
-@Unpublished{Agostinelli-Wiswall_2016_Identification,
+@Unpublished{Agostinelli_Wiswall_2016_EstimatingTech,
+  Title                    = {Estimating the Technology of Children's Skill Formation},
+  Author                   = {Agostinelli, Francesco and Wiswall, Matthew},
+  Note                     = {Working Paper, W. P. Carey School of Business, University of Wisconsin-Madison, Arizona State University},
+
+  Month                    = {July},
+  Year                     = {2016}
+}
+
+@Unpublished{Agostinelli_Wiswall_2016_Identification,
   Title                    = {Identification of Dynamic Latent Factor Models: The Implications of Re-Normalization in a Model of Child Development},
   Author                   = {Agostinelli, Francesco and Wiswall, Matthew},
   Note                     = {Working Paper, W. P. Carey School of Business, Arizona State University},
@@ -1130,6 +1139,20 @@
   Number                   = {3},
   Pages                    = {639--650},
   Volume                   = {75}
+}
+
+@Article{Ahuja-etal_2015_WBER,
+  Title                    = {When Should Governments Subsidize Health? {T}he Case of Mass Deworming},
+  Author                   = {Ahuja, Amrita and Baird, Sarah and Hicks, Joan Hamory and Kremer, Michael and Miguel, Edward and Powers, Shawn},
+  Journal                  = {World Bank Economic Review},
+  Year                     = {2015},
+  Number                   = {Supplement 1},
+  Pages                    = {S9--S24},
+  Volume                   = {29},
+
+  Doi                      = {10.1093/wber/lhv008},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.02}
 }
 
 @Article{Ai_Chen_2007_JoE,
@@ -1320,7 +1343,8 @@
   Pages                    = {659--684},
   Volume                   = {109},
 
-  Owner                    = {The Detroyer}
+  Owner                    = {The Detroyer},
+  Timestamp                = {(checked jld)}
 }
 
 @Article{Aiyagari_Greenwood_ea_2002_JET,
@@ -2028,7 +2052,10 @@
   Month                    = {July},
   Number                   = {3},
   Pages                    = {353--366},
-  Volume                   = {14}
+  Volume                   = {14},
+
+  Doi                      = {10.2307/1392447},
+  Timestamp                = {(checked jld)}
 }
 
 @Article{Altshuler_Daly_etal_2008_Science,
@@ -2084,6 +2111,16 @@
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2015.07.31}
+}
+
+@Article{Alvarez_Jermann_2001_Quant_RoFS,
+  Title                    = {Quantitative Asset Pricing Implications of Endogenous Solvency Constraints},
+  Author                   = {Alvarez, Fernando and Jermann, Urban J.},
+  Journal                  = {Review of Financial Studies},
+  Year                     = {2001},
+  Number                   = {4},
+  Pages                    = {1117--1151},
+  Volume                   = {14}
 }
 
 @Article{Alvarez_Arellano_2003_Econometrica,
@@ -2836,17 +2873,19 @@
   Timestamp                = {2008.04.14}
 }
 
-@InCollection{Anderson_Rubin_1956_statistical,
+@InProceedings{Anderson_Rubin_1956_statistical,
   Title                    = {Statistical Inference in Factor Analysis},
   Author                   = {Anderson, Theodore W. and Rubin, Herman},
   Booktitle                = {Proceedings of the Third {Berkeley Symposium on Mathematical Statistics and Probability}},
-  Publisher                = {University of California Press},
   Year                     = {1956},
 
   Address                  = {Berkeley, CA},
   Editor                   = {Neyman, Jerzy},
   Pages                    = {111--150},
-  Volume                   = {5}
+  Publisher                = {University of California Press},
+  Volume                   = {5},
+
+  Timestamp                = {(checked jld)}
 }
 
 @Unpublished{Andersson_1993_choosing,
@@ -3444,6 +3483,20 @@
   Year                     = {2003},
 
   Address                  = {New York}
+}
+
+@Article{Arellano_1991_Some-Tests,
+  Title                    = {Some Tests of Specification for Panel Data: {M}onte {C}arlo Evidence and an Application to Employment Equations},
+  Author                   = {Arellano, Manuel and Bond, Stephen},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1991},
+  Note                     = {Oxford University Press},
+  Number                   = {2},
+  Pages                    = {227--297},
+  Volume                   = {58},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2016.12.01}
 }
 
 @InCollection{Arellano_Honore_2001_HoE,
@@ -4617,6 +4670,22 @@
   Timestamp                = {2007.05.01}
 }
 
+@InCollection{Bailey-Dynarski_2011_In-Book_Inequality,
+  Title                    = {Inequality in Postsecondary Education},
+  Author                   = {Bailey, Martha J. and Dynarski, Susan M.},
+  Booktitle                = {Whither Opportunity? {R}ising Inequality, Schools, and Children's Life Chances},
+  Publisher                = {Russell Sage Foundation},
+  Year                     = {2011},
+
+  Address                  = {New York},
+  Chapter                  = {6},
+  Editor                   = {Duncan, Greg J. and Murnane, Richard J.},
+  Pages                    = {117--132},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.02}
+}
+
 @TechReport{Bailey-Dynarski_2011_GainsandGaps,
   Title                    = {Gains and Gaps: Changing Inequality and {U.S.} College Entry and Completion},
   Author                   = {Bailey, Martha J. and Dynarski, Susan M.},
@@ -4640,6 +4709,16 @@
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.03.16}
+}
+
+@Unpublished{Baird-etal_2016_QJE,
+  Title                    = {Worms at Work: Long-Run Impacts of a Child Health Investment},
+  Author                   = {Baird, Sarah and Hicks, Joan Hamory and Kremer, Michael and Miguel, Edward},
+  Note                     = {Forthcoming, \emph{Quarterly Journal of Economics}},
+  Year                     = {2016},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.02}
 }
 
 @Misc{Bajaj_Labaton_2009_ObamaRiskAssets,
@@ -7064,7 +7143,10 @@
   Month                    = {December},
   Number                   = {1},
   Pages                    = {37--89},
-  Volume                   = {1}
+  Volume                   = {1},
+
+  Doi                      = {10.1086/524674},
+  Timestamp                = {(checked jld)}
 }
 
 @Article{Belman_Heywood_1991_RES,
@@ -9376,6 +9458,7 @@
   Pages                    = {73--117},
   Volume                   = {122},
 
+  Doi                      = {10.1162/qjec.121.1.73},
   Timestamp                = {2009.04.09}
 }
 
@@ -12372,15 +12455,18 @@
   Title                    = {Micro Data and General Equilibrium Models},
   Author                   = {Browning, Martin and Hansen, Lars Peter and Heckman, James J.},
   Booktitle                = {{H}andbook of {M}acroeconomics},
-  Publisher                = {Elsevier},
+  Publisher                = {Elsevier B. V.},
   Year                     = {1999},
+
+  Address                  = {Amsterdam},
   Chapter                  = {8},
   Editor                   = {Taylor, John B. and Woodford, Michael},
-  Month                    = {December},
   Pages                    = {543--633},
   Volume                   = {1A},
 
-  Owner                    = {Lynn}
+  Doi                      = {10.1016/S1574-0048(99)01011-3},
+  Owner                    = {Lynn},
+  Timestamp                = {(checked jld)}
 }
 
 @Article{Browning_Meghir_1991_Econometrica,
@@ -13723,7 +13809,7 @@
   Address                  = {New York},
 
   Owner                    = {Heckman RA},
-  Timestamp                = {2009.04.09}
+  Timestamp                = {2009.04.09 (checked jld)}
 }
 
 @Unpublished{Cameron_2004_earlysens,
@@ -13777,7 +13863,8 @@
   Pages                    = {455--499},
   Volume                   = {109},
 
-  Doi                      = {10.1086/321014}
+  Doi                      = {10.1086/321014},
+  Timestamp                = {(checked jld)}
 }
 
 @Article{Cameron_Heckman_1998_JPE,
@@ -13789,7 +13876,10 @@
   Month                    = {April},
   Number                   = {2},
   Pages                    = {262--333},
-  Volume                   = {106}
+  Volume                   = {106},
+
+  Doi                      = {10.1086/250010},
+  Timestamp                = {(checked jld)}
 }
 
 @Article{Cameron_Heckman_1993_JLE,
@@ -14697,7 +14787,8 @@
   Pages                    = {705--734},
   Volume                   = {112},
 
-  Doi                      = {10.1111/1468-0297.00075}
+  Doi                      = {10.1111/1468-0297.00075},
+  Timestamp                = {(checked jld)}
 }
 
 @InCollection{Carneiro_Heckman_ea_2006_ethnicracial,
@@ -15222,6 +15313,22 @@
   Volume                   = {46}
 }
 
+@Article{Caselli-Feyrer_2007_QJE,
+  Title                    = {The Marginal Product of Capital},
+  Author                   = {Caselli, Francesco and Feyrer, James},
+  Journal                  = {Quarterly Journal of Economics},
+  Year                     = {2007},
+
+  Month                    = {May},
+  Number                   = {2},
+  Pages                    = {535--568},
+  Volume                   = {122},
+
+  Doi                      = {10.1162/qjec.122.2.535},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.17}
+}
+
 @Article{Casey_Tottenham_etal_2005_TiCS,
   Title                    = {Imaging the developing brain: What have we learned about cognitive development?},
   Author                   = {Casey, B. J. and Tottenham, Nim and Liston, Connor and Durston, Sarah},
@@ -15278,9 +15385,9 @@
 }
 
 @Unpublished{Caspi-etal_2016_Nature-Hum-Beh,
-  Title                    = {A Small Segment of the Population with Large Economic Burden: Childhood Forecasting},
+  Title                    = {Childhood Forecasting of a Small Segment of the Population with Large Economic Burden},
   Author                   = {Caspi, Avshalom and Houts, Renate M. and Belsky, Daniel W. and Harrington, Honalee and Hogan, Sean and Ramrakha, Sandhya and Poulton, Richie and Moffitt, Terrie E.},
-  Note                     = {Submitted to \emph{Nature Human Behavior}},
+  Note                     = {Forthcoming, \emph{Nature Human Behaviour}},
   Year                     = {2016},
 
   Owner                    = {Jessica Dyer},
@@ -15547,11 +15654,13 @@
   Author                   = {Caucutt, Elizabeth M. and Lochner, Lance J.},
   Institution              = {National Bureau of Economic Research},
   Year                     = {2012},
+  Month                    = {October},
   Number                   = {18493},
   Type                     = {Working Paper},
 
   Date-added               = {2013-06-21 20:58:23 +0000},
-  Date-modified            = {2013-06-21 21:01:21 +0000}
+  Date-modified            = {2013-06-21 21:01:21 +0000},
+  Timestamp                = {(checked jld)}
 }
 
 @TechReport{Cave_Bos_etal_1993_jobstart_final,
@@ -17611,6 +17720,21 @@
   Timestamp                = {2011.07.17}
 }
 
+@Article{Clowes_1980_J-Dev-Rem-Edu,
+  Title                    = {More Than a Definitional Problem: Remedial, Compensatory, and Developmental Education},
+  Author                   = {Clowes, Darrel A.},
+  Journal                  = {Journal of Development and Remedial Education},
+  Year                     = {1980},
+
+  Month                    = {Fall},
+  Number                   = {1},
+  Pages                    = {8--10},
+  Volume                   = {4},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.04}
+}
+
 @Article{Coate_Loury_1993_AER,
   Title                    = {Will Affirmative-Action Policies Eliminate Negative Stereotypes?},
   Author                   = {Stephen Coate and Glenn C. Loury},
@@ -19622,6 +19746,19 @@
 
   Owner                    = {Andrew},
   Timestamp                = {2015.10.02}
+}
+
+@TechReport{Croke-etal_2016_NBER_Mass-Deworming,
+  Title                    = {Does Mass Deworming Affect Child Nutrition? {M}eta-Analysis, Cost-Effectiveness, and Statistical Power},
+  Author                   = {Croke, Kevin and Hicks, Joan Hamory and Hsu, Eric and Kremer, Michael and Miguel, Edward},
+  Institution              = {National Bureau of Economic Research},
+  Year                     = {2016},
+  Month                    = {July},
+  Number                   = {22382},
+  Type                     = {Working Paper},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.02}
 }
 
 @Book{Cronbach_1990_PsychTesting,
@@ -21764,6 +21901,37 @@
 
   Owner                    = {Jenna},
   Timestamp                = {2015.09.08}
+}
+
+@Article{Derman-Sparks_2016_J-of-Pedagogy,
+  Title                    = {What {I} Learned from the {Ypsilanti Perry Preschool Project}: A Teacher's Reflections},
+  Author                   = {Derman-Sparks, Louise},
+  Journal                  = {Journal of Pedagogy},
+  Year                     = {2016},
+
+  Month                    = {June},
+  Number                   = {1},
+  Pages                    = {93--106},
+  Volume                   = {7},
+
+  Doi                      = {10.1515/jped-2016-0006},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.03}
+}
+
+@Article{Derman-Sparks_Moore_2016_YC_Two-Teachers,
+  Title                    = {Two Teachers Look Back: The {Ypsilanti Perry Preschool}, Part {I}},
+  Author                   = {Derman-Sparks, Louise and Moore, Evelyn},
+  Journal                  = {Young Children},
+  Year                     = {2016},
+
+  Month                    = {September},
+  Number                   = {4},
+  Pages                    = {82--87},
+  Volume                   = {71},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.03}
 }
 
 @Article{DeRobertis_Hartigan_1981_AoS,
@@ -25048,6 +25216,23 @@
   Timestamp                = {2008.04.10}
 }
 
+@InCollection{Elango_Hojman_etal_2016_Early-Edu,
+  Title                    = {Early Childhood Education},
+  Author                   = {Elango, Sneha and and Garc\'{i}a, Jorge Luis and Heckman, James J. and Hojman, Andr\'{e}s},
+  Booktitle                = {Economics of Means-Tested Transfer Programs in the {U}nited {S}tates},
+  Publisher                = {University of Chicago Press},
+  Year                     = {2016},
+
+  Address                  = {Chicago},
+  Chapter                  = {4},
+  Editor                   = {Moffitt, Robert A.},
+  Pages                    = {235--297},
+  Volume                   = {2},
+
+  Owner                    = {Kyaw Latt},
+  Timestamp                = {2015.03.16}
+}
+
 @Unpublished{Elango_Garcia_Hojman_Kuperman_2014_Perry_Differences_UNPUBLISHED,
   Title                    = {Perry Cohort Differences},
   Author                   = {Elango, Sneha and Garcia, Jorge and Hojman, Andr\`{e}s and Kuperman, Sylvi},
@@ -25055,16 +25240,6 @@
 
   Owner                    = {Stallings_LLC},
   Timestamp                = {2015.02.03}
-}
-
-@Unpublished{Elango_Hojman_etal_2016_Early-Edu,
-  Title                    = {Early Childhood Education},
-  Author                   = {Elango, Sneha and Hojman, Andr\'{e}s and Garc\'{i}a, Jorge Luis and Heckman, James J.},
-  Note                     = {Forthcoming, in Moffitt, Robert (ed.), \emph{{M}eans-Tested Transfer Programs in the {U}nited {S}tates {II}}. Chicago: {U}niversity of {C}hicago {P}ress, 2016},
-  Year                     = {2016},
-
-  Owner                    = {Kyaw Latt},
-  Timestamp                = {2015.03.16}
 }
 
 @Article{Elardo_Bradley_1981_DR,
@@ -30586,6 +30761,17 @@
   Timestamp                = {2009.08.12}
 }
 
+@Article{Gertler_Kiyotaki_Queralto_2012_JoME,
+  Title                    = {Financial crises, bank risk exposure and government financial policy},
+  Author                   = {Gertler, Mark and Kiyotaki, Nobuhiro and Queralto, Albert},
+  Journal                  = {Journal of Monetary Economics},
+  Year                     = {2012},
+  Pages                    = {S17--S34},
+  Volume                   = {59},
+
+  Publisher                = {Elsevier}
+}
+
 @Article{Gertler_Heckman_etal_2014_Science,
   Title                    = {Labor Market Returns to an Early Childhood Stimulation Intervention in {J}amaica},
   Author                   = {Gertler, Paul and Heckman, James J. and Pinto, Rodrigo and Zanolini, Arianna and Vermeersch, Christel and Walker, Susan and Chang, Susan and Grantham-McGregor, Sally M.},
@@ -31984,17 +32170,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
-}
-
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -32007,6 +32182,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
+}
+
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -34112,7 +34298,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 }
 
 @TechReport{Hai-etal_2015_On-Welfare-Cost,
-  Title                    = {On the Welfare Cost of Consumption Fluctuations in the Presence of Memorable Goods},
+  Title                    = {On the Welfare Cost of Consumption Fluctuations in the Presence of Memorable Goods, Second Version},
   Author                   = {Hai, Rong and Krueger, Dirk and Postlewaite, Andrew},
   Institution              = {Penn Institute for Economic Research, University of Pennsylvania},
   Year                     = {2015},
@@ -39040,7 +39226,9 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Pages                    = {341--396},
   Volume                   = {136},
 
-  Owner                    = {The Detroyer}
+  Doi                      = {10.1016/j.jeconom.2005.11.002},
+  Owner                    = {The Detroyer},
+  Timestamp                = {(checked jld)}
 }
 
 @Unpublished{Heckman_Navarro_2005_empestopt,
@@ -39232,9 +39420,14 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Author                   = {Heckman, James J. and Pinto, Rodrigo and Savelyev, Peter A.},
   Journal                  = {American Economic Review},
   Year                     = {2013},
+
+  Month                    = {October},
   Number                   = {6},
   Pages                    = {2052--2086},
-  Volume                   = {103}
+  Volume                   = {103},
+
+  Doi                      = {10.1257/aer.103.6.2052},
+  Timestamp                = {(checked jld)}
 }
 
 @Unpublished{Heckman_etal_2009_PerryFactor,
@@ -44386,6 +44579,18 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2011.12.13}
 }
 
+@Article{Jermann_Quadrini_2012_Macroeconomic_AER,
+  Title                    = {Macroeconomic Effects of Financial Shocks},
+  Author                   = {Jermann, Urban J. and Quadrini, Vincenzo},
+  Journal                  = {The American Economic Review},
+  Year                     = {2012},
+  Number                   = {1},
+  Pages                    = {238--271},
+  Volume                   = {102},
+
+  Publisher                = {American Economic Association}
+}
+
 @Book{JobTrainPanel_1985_recommendations,
   Title                    = {Recommendations of the {Job Training Longitudinal Survey} Research Advisory Panel},
   Author                   = {{Job Training Longitudinal Survey Research Advisory Panel}},
@@ -44696,7 +44901,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
   Doi                      = {10.1086/669964},
   Owner                    = {Alexandra},
-  Timestamp                = {2014.07.14}
+  Timestamp                = {2014.07.14 (checked jld)}
 }
 
 @Book{Prentice_2007_Multivariate-Stats,
@@ -45946,7 +46151,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 }
 
 @Unpublished{Kautz-Zanoni_2015_Measuring,
-  Title                    = {Measuring and Fostering Non-Cognitive Skills in Adolescents: Evidence from {C}hicago {P}ublic {S}chools and the {O}ne{G}oal {P}rogram},
+  Title                    = {Measuring and Fostering Non-Cognitive Skills in Adolescence: Evidence from {C}hicago {P}ublic {S}chools and the {O}ne{G}oal {P}rogram},
   Author                   = {Kautz, Tim and Zanoni, Wladimir},
   Note                     = {Unpublished manuscript, University of Chicago, Department of Economics},
   Year                     = {2015},
@@ -48511,7 +48716,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 }
 
 @Unpublished{perry2014-2015interviews,
-  Title                    = {Interviews and Reflections of {L}ouise {D}erman-{S}parks, {E}velyn {M}oore, and {C}onstance {K}amii},
+  Title                    = {Interviews and Reflections of {L}ouise {D}erman-{S}parks, {E}velyn {M}oore, {C}onstance {K}amii, and {P}ercy {B}ates},
   Author                   = {Kuperman, Sylvi},
   Note                     = {University of Chicago's Center for the Economics of Human Development, Chicago},
   Year                     = {2014--2015},
@@ -51875,11 +52080,12 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Institution              = {University of Rochester, Center for Economic Research}
 }
 
-@TechReport{Lochner_Monge-Naranjo_2016_StudentLoans_NBER,
+@TechReport{Lochner_Monge-Naranjo_2015_StudentLoans_NBER,
   Title                    = {Student Loans and Repayment: Theory, Evidence and Policy},
   Author                   = {Lochner, Lance J. and Monge-Naranjo, Alexander},
   Institution              = {National Bureau of Economic Research},
-  Year                     = {2016},
+  Year                     = {2015},
+  Month                    = {January},
   Number                   = {20849},
   Type                     = {Working Paper},
 
@@ -56806,7 +57012,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 }
 
 @Article{Miguel_Kremer_2004_Econometrica,
-  Title                    = {Worms: Identifying Impacts on Education and Health in the Presence of Treatment},
+  Title                    = {Worms: Identifying Impacts on Education and Health in the Presence of Treatment Externalities},
   Author                   = {Miguel, Edward and Kremer, Michael},
   Journal                  = {Econometrica},
   Year                     = {2004},
@@ -56816,6 +57022,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Pages                    = {159--217},
   Volume                   = {72},
 
+  Doi                      = {10.1111/j.1468-0262.2004.00481.x},
   Timestamp                = {2009.04.09}
 }
 
@@ -59377,14 +59584,17 @@ Robinson, Lara Rachel},
 
 @TechReport{Navarro_2011_UsingObservedChoices,
   Title                    = {Using Observed Choices to Infer Agent's Information: Reconsidering the Importance of Borrowing Constraints, Uncertainty and Preferences in College Attendance},
-  Author                   = {Salvador Navarro},
-  Institution              = {University of Western Ontario, CIBC Centre for Human Capital and Productivity},
+  Author                   = {Navarro, Salvador},
+  Institution              = {University of Western Ontario, Centre for Human Capital and Productivity},
   Year                     = {2011},
-  Number                   = {20118,},
-  Type                     = {Working Paper},
+
+  Address                  = {London, Ontario},
+  Month                    = {August},
+  Number                   = {2011-8},
+  Type                     = {CHCP Working Paper},
 
   Abstract                 = {I use economic theory and estimates of a semiparametrically identied structural model to analyze the role played by credit constraints, uncertainty and preferences in explaining college attendance. A methodology for inferring information available to the agent from individual choices is proposed and implemented. The test distinguishes which of the unobserved (to the analyst) components of future outcomes are known to the agent and which are unknown to both at a given stage of the life cycle. I use microdata on earnings, schooling and consumption to infer the agent's information set and estimate a model of college choice and consumption under uncertainty with equilibrium borrowing constraints. I estimate that 80\% and 44\% of the variances of college and high school earnings respectively are predictable by the agent. Moving to a no tuition economy increases college attendance from 48\% to 50\%. When people are allowed to smooth consumption, college increases to nearly 58\%. General equilibrium effects not withstanding, credit constraints have a larger effect than previously suggested.},
-  Url                      = {http://ideas.repec.org/p/uwo/hcuwoc/20118.html}
+  Timestamp                = {(checked jld)}
 }
 
 @Unpublished{Navarro_2007_ReconsideringImportance,
@@ -59416,6 +59626,16 @@ Robinson, Lara Rachel},
   Author                   = {Navarro, Salvador},
   Note                     = {Unpublished working paper, University of Chicago, Department of Economics},
   Year                     = {2002}
+}
+
+@Unpublished{Navarro-Zhou_2016_Quantifying-Credit,
+  Title                    = {Quantifying Credit Constraints, Preferences, and Uncertainty in a Lifecycle Model of Schooling Choice},
+  Author                   = {Navarro, Salvador and Zhou, Jin},
+  Note                     = {Under revision, \emph{Review of Economic Dynamics}},
+  Year                     = {2016},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.01}
 }
 
 @InCollection{Neal_2008_BWlaborineq,
@@ -64767,6 +64987,20 @@ Robinson, Lara Rachel},
   Timestamp                = {2015.07.24}
 }
 
+@Article{Pullan-etal_2014_P-and-V,
+  Title                    = {Global Numbers of Infection and Disease Burden of Soil Transmitted Helminth Infections in 2010},
+  Author                   = {Pullan, Rachel L. and Smith, Jennifer L. and Jasrasaria, Rashmi and Brooker, Simon J.},
+  Journal                  = {Parasites \& Vectors},
+  Year                     = {2014},
+  Number                   = {1},
+  Pages                    = {37},
+  Volume                   = {7},
+
+  Doi                      = {10.1186/1756-3305-7-37},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.02}
+}
+
 @TechReport{Puma_Bell_etal_2010_HeadStartImpact,
   Title                    = {{H}ead {S}tart {I}mpact {S}tudy: Final Report},
   Author                   = {Puma, Michael and Bell, Stephen and Cook, Ronna and Heid, Camilla},
@@ -69331,6 +69565,18 @@ Robinson, Lara Rachel},
   Pages                    = {131--182},
 
   Timestamp                = {2008.11.23}
+}
+
+@TechReport{Saboya-etal_2011_Soil-Trans-Helminths,
+  Title                    = {Prevalence and Intensity of Infection of Soil-Transmitted Helminths in {L}atin {A}merica and the {C}aribbean Countries: Mapping at Second Administrative Level 2000--2010},
+  Author                   = {Saboy\'{a}, M. I. and Catal\'{a}, L. and Ault, S. K. and Nicholls, R. S.},
+  Institution              = {Pan American Health Organization, Regional Office of the World Health Organization (WHO)},
+  Year                     = {2011},
+
+  Address                  = {Washington, D.C.},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.02}
 }
 
 @InCollection{Sacerdote_2011_Nature-Nurture,
@@ -75689,6 +75935,21 @@ Robinson, Lara Rachel},
   Timestamp                = {2015.10.05}
 }
 
+@Article{Taylor-Robinson-etal_2015_CDSR,
+  Title                    = {Deworming Drugs for Soil-Transmitted Intestinal Worms in Children: Effects on Nutritional Indicators, Haemoglobin, and School Performance},
+  Author                   = {Taylor-Robinson, David C. and Maayan, Nicola and Soares-Weiser, Karla and Donegan, Sarah and Garner, Paul},
+  Journal                  = {Cochrane Database of Systematic Reviews},
+  Year                     = {2015},
+
+  Month                    = {July},
+  Note                     = {Article No. CD000371},
+  Number                   = {7},
+
+  Doi                      = {10.1002/14651858.CD000371.pub6},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.02}
+}
+
 @Article{Tchen_1980_AP,
   Title                    = {Inequalities for Distributions with Given Marginals},
   Author                   = {Tchen, Andr\'{e} H.},
@@ -80300,6 +80561,16 @@ early childhood education and pre-kindergarten programs},
   Timestamp                = {2014.12.19}
 }
 
+@Unpublished{Weikart_1975_Parent-Involvement,
+  Title                    = {Parent Involvement: Process and Results of the {High/Scope Foundation's} Projects},
+  Author                   = {Weikart, David P.},
+  Note                     = {Presented at the Biennial Meeting of the Society for Research in Child Development, Denver, CO, April 1975},
+  Year                     = {1975},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.04}
+}
+
 @TechReport{Weikart_1973_Classification,
   Title                    = {Classification in the High Scope cognitive curriculum},
   Author                   = {Weikart, D. P.},
@@ -82112,6 +82383,31 @@ early childhood education and pre-kindergarten programs},
 
   Owner                    = {Jenni},
   Timestamp                = {2012.12.13}
+}
+
+@Manual{WHO_2006_Preventive-Chemo,
+  Title                    = {Preventive Chemotherapy in Human Helminthiasis. Coordinated Use of Anthelminthic Drugs in Control Interventions: A Manual for Health Professionals and Programme Managers},
+
+  Address                  = {Geneva, Switzerland},
+  Author                   = {{World Health Organization (WHO)}},
+  Organization             = {Preventive Chemotherapy and Transmission Control (PCT), Department of Control of Neglected Tropical Diseases (NTD), World Health Organization (WHO)},
+  Year                     = {2006},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.02}
+}
+
+@Electronic{WHO_2012_Deworming,
+  Title                    = {Deworming to Combat the Health and Nutritional Impact of Soil-Transmitted Helminths: Biological, Behavioural and Contextual Rationale},
+  Author                   = {{World Health Organization (WHO) Technical Staff}},
+  HowPublished             = {Website, http://www.who.int/elena/titles/bbc/deworming/en/, (Accessed 11/2/2016)},
+  Month                    = {March},
+  Organization             = {World Health Organization (WHO)},
+  Url                      = {http://www.who.int/elena/titles/bbc/deworming/en/},
+  Year                     = {2012},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.11.02}
 }
 
 @Unpublished{Worner_1973_AoEDSAC,
